--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -4,7 +4,34 @@ body {
     padding: 0;
   }
 
+  .container-fluid {
+    padding: 0;
+  }
+
   .landing {
     padding-top: 5.5rem;
     padding-bottom: 2rem;
+  }
+
+  #header-hero {
+    display: inline-block;
+    width: 100%;
+    height: 400px;
+    position: relative;
+  }
+  
+  #hero-bg {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-image: 
+      url(https://images.unsplash.com/photo-1538481199705-c710c4e965fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1132&q=80);
+    background-position: center;
+    background-size: cover;
+    object-fit: contain;
+    width: 100%;
+    height: 50vh;
+    z-index: -1;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+    /* opacity: 0.80; */
   }
