--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -35,3 +35,7 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
     /* opacity: 0.80; */
   }
+
+  #landing__btn {
+    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  }
