--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,21 @@
-#navbar {
-    background-color: lavender;
+.container-fluid {
+    padding-bottom: 5vh;
+}
+
+#nav__bar {
+    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+    padding: 0rem 5rem;
+    color: white;
+}
+
+#nav__link, a {
+    color:white;
+    text-decoration: none;
+}
+
+#nav__link, a:hover {
+    text-decoration: none;
+    color: yellow;
+    font-size: 1.2rem;
+    transition: .9s;
 }
