--- a/src/styles/reviewlist.css
+++ b/src/styles/reviewlist.css
@@ -3,3 +3,7 @@
     justify-content: center;
     align-items: center;
 }
+
+.btn {
+    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+}
