--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,41 +1,100 @@
-body {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  color: white;
+}
 
-  .container-fluid {
-    padding: 0;
-  }
+.hero {
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://www.hdwallpapers.net/previews/purple-waves-1179.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+}
 
-  .landing {
-    padding-top: 5.5rem;
-    padding-bottom: 2rem;
-  }
+.logo {
+  padding-top: 3.5vh;
+  padding-left: 5vw;
+  cursor: pointer;
+}
+#landing__btn {
+  background-image: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%);
+  border-radius: 20px;
+  border: 2.5px solid white;
+}
 
-  #header-hero {
-    display: inline-block;
-    width: 100%;
-    height: 400px;
-    position: relative;
-  }
-  
-  #hero-bg {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-image: 
-      url(https://images.unsplash.com/photo-1538481199705-c710c4e965fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1132&q=80);
-    background-position: center;
-    background-size: cover;
-    object-fit: contain;
-    width: 100%;
-    height: 50vh;
-    z-index: -1;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
-    /* opacity: 0.80; */
-  }
+.content {
+  position: absolute;
+  top: 50%;
+  left: 8%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
 
-  #landing__btn {
-    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+h1 {
+  font-size: 5rem;
+  margin: 0.625rem 0 1.875rem;
+  line-height: 5rem;
+}
+
+.icons img {
+  width: 3.125rem;
+  animation: elevate 7s linear infinite;
+}
+
+.icons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  bottom: -4.375rem;
+}
+
+@keyframes elevate {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
   }
+  50% {
+    
+    opacity: 1;
+  }
+  70% {
+    
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-80vh);
+    opacity: 0;
+  }
+}
+
+.icons img:nth-child(1) {
+  width: 2.8rem;
+  animation-delay: 2s;
+}
+.icons img:nth-child(2) {
+  animation-delay: 1s;
+}
+.icons img:nth-child(3) {
+  width: 2.8rem;
+  animation-delay: 3s;
+}
+.icons img:nth-child(4) {
+  animation-delay: 6s;
+}
+.icons img:nth-child(5) {
+  width: 2.7rem;
+  animation-delay: 4.5s;
+}
+.icons img:nth-child(6) {
+  animation-delay: 3s;
+}
+.icons img:nth-child(7) {
+  width: 3.1rem;
+  animation-delay: 7s;
+}
