--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,8 @@
+h1 {
+  text-align: center;
+  color: black;
+}
+
 .container-fluid {
   padding: 0;
 }
@@ -9,6 +14,6 @@
 }
 
 .d-block {
-  width: 100%;
+  width: 50%;
   height: calc(100vh - 200px);
 }
