--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -9,6 +9,9 @@
   width: 100%;
   height: 100vh;
   background-image: url("https://www.hdwallpapers.net/previews/purple-waves-1179.jpg");
+  background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  /* background-image: url("https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"); */
+  
   background-size: cover;
   background-position: center;
   position: relative;
@@ -22,6 +25,7 @@
 }
 #landing__btn {
   background-image: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%);
+  background: transparent;
   border-radius: 20px;
   border: 2.5px solid white;
 }
