--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,19 +1,13 @@
 h1 {
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .container-fluid {
   padding: 0;
 }
 
-.challenger__carousel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.d-block {
-  width: 50%;
-  height: calc(100vh - 200px);
+.main-container {
+  height: 60vh;
+  position: relative; 
 }
