--- a/src/styles/monitors.css
+++ b/src/styles/monitors.css
@@ -1,3 +1,15 @@
 .btn {
 background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    max-height: 400px;
+    min-width: 100px;
+    margin: 5px;
+    padding: 30px;
+    width: 100%;
+}
