--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,16 +2,24 @@
     padding-bottom: 5vh;
 }
 
+a {
+    color: white;
+}
+
 #nav__bar {
     background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
     padding: 0rem 5rem;
     color: white;
 }
 
-#nav__link, a {
-    color:white;
-    text-decoration: none;
+#nav__link {
+    color: white;
 }
 
 #nav__link, a:hover {
+    color: black;
+    transition: .9s;
+    font-size: 1.1rem;
+    text-decoration: none;
 }
+
