--- a/src/styles/reviewlist.css
+++ b/src/styles/reviewlist.css
@@ -8,5 +8,7 @@
     background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
 }
 
-.thead {
+.btn:hover {
+    font-size: 1.1rem;
+    transition: .9s;
 }
