--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -45,6 +45,7 @@ text-decoration: none;
   font-size: 5rem;
   margin: 0.625rem 0 1.875rem;
   line-height: 5rem;
+  color: white;
 }
 
 .landing__h6 {
