footer and home page updates

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -11,7 +11,7 @@
   background-image: url("https://images5.alphacoders.com/880/thumb-1920-880175.jpg");
   background-image: url("https://images5.alphacoders.com/872/thumb-1920-872037.png");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   position: relative;
   overflow: hidden;
 }
