--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
-body {
+html, body {
+    height: 100%;
+ position: relative;
  overflow-x: hidden;
 }
 
 .top-header {
     text-align: center;
-    padding-top: 10vh;
-    font-family: 'Roboto', sans-serif;
+    padding: 10vh 5vw 1vh 5vw;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 p {
     font-family: 'Montserrat', sans-serif;
 }
 
-.root {
-    height: calc(100% - 60px);
+
+td {
+    font-family: 'Montserrat', sans-serif;
 }
