--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,20 +1,14 @@
-.container-fluid {
-    padding: 0;
-    margin: 0;
-}
-
-
 #footer {
-    margin-top: 20vh;
     position: relative;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    left:0;
+    bottom:-3rem;
+    right:0;
     width: 100vw;
-    height: 23vh;
+    height: 24vh;
     background-color: #ff8e53;
     color: white;
     background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+    overflow-y: hidden;
 }
 
 @media only screen and (min-width: 1400px) {
@@ -156,8 +150,6 @@ ul .email a:hover {
 
 .copyright {
     text-align: center;
-    align-items: center;
-    position: absolute;
-    top: 60%;
-    left: 41%;
+    top: 65%;
+    position: relative;
 }
