--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,28 @@
-
-
-.container-fluid {
-  padding: 0;
+.main-container {
+  min-height: 100vh;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; 
 }
 
-.main-container {
+.home-container {
+  min-height: 80vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative; /* height of your footer */
+}
+
+h3 {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.carousel {
+  margin: 7vh 20vw 0 20vw;
+  padding-bottom: 0;
+}
+
+.d-block {
   height: 60vh;
-  position: relative; 
+  border-radius: 2%;
 }
