--- a/src/styles/reviewlist.css
+++ b/src/styles/reviewlist.css
@@ -2,11 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 8vh;
-}
-
-.btn {
-    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+    padding-top: 8vh 0 10vw;
+    margin: 10vh 10vw 2vh 10vw;
 }
 
 .btn:hover {
