--- a/src/styles/addreview.css
+++ b/src/styles/addreview.css
@@ -23,3 +23,7 @@ th {
     background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
     margin: 2rem 1rem 0;
 }
+
+.btn {
+    background-image: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+}
