--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -19,6 +19,7 @@
     /* width: 33vw;
     margin: 2vw;
     border: none; */
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
