--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -17,8 +17,8 @@
 
 .card {    
     /* width: 33vw;
-    margin: 2vw;
-    border: none; */
+    margin: 1vw; */
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
